--- a/package.json
+++ b/package.json
@@ -1,128 +1,77 @@
 {
-  "name": "mihas-katc-application-system",
+  "name": "mihas-application-system",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build && node scripts/generate-sri.js",
-    "build:prod": "tsc -b && NODE_ENV=production vite build --mode production && node scripts/generate-sri.js",
-    "build:analyze": "tsc -b && vite build --mode production && npx vite-bundle-analyzer dist",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "build:prod": "tsc && vite build --mode production",
+    "build:analyze": "tsc && vite build --mode production && npx vite-bundle-analyzer dist/stats.html",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "type-check": "tsc --noEmit",
-    "security-audit": "npm audit --audit-level moderate",
-    "security-scan": "node security-audit.js",
-    "security-validate": "node scripts/validate-security.js",
-    "install-deps": "npm install",
-    "clean": "rm -rf node_modules package-lock.json",
-    "setup-storage": "node setup-storage-fixed.js",
-    "test-storage": "node test-storage.js",
-    "storage:setup": "node setup-storage-fixed.js",
-    "storage:test": "node test-storage.js",
-    "storage:validate": "node test-storage.js",
-    "test": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts",
-    "test:ui": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts --ui",
-    "test:debug": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts --debug",
-    "test:headed": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts --headed",
-    "test:form": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts testing/tests/form-submission.spec.ts",
-    "test:auth": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts testing/tests/auth.spec.ts",
-    "test:wizard": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts testing/tests/application-wizard.spec.ts",
-    "test:enhanced": "VITE_TEST_MODE=true playwright test --config=testing/playwright.config.ts testing/tests/enhanced-features.spec.ts",
+    "test": "playwright test",
+    "test:ui": "playwright test --ui",
+    "test:debug": "playwright test --debug",
     "test:install": "playwright install",
-    "test:setup": "playwright test --config=testing/playwright.config.ts testing/tests/auth-setup.ts",
-    "optimize:images": "node optimize-images.js",
-    "migrate:enhanced": "node apply_enhanced_features.js",
-    "ai:setup": "node apply_enhanced_features.js",
-    "features:deploy": "npm run migrate:enhanced && npm run build:prod",
-    "analytics:init": "node -e \"console.log('🤖 AI Analytics initialized - check admin dashboard')\"",
-    "mcp:install": "npm install -g @modelcontextprotocol/server-postgres",
-    "mcp:setup": "echo 'Add your Supabase connection string to .env as POSTGRES_CONNECTION_STRING'"
+    "test:auth": "playwright test tests/auth.spec.ts",
+    "test:wizard": "playwright test tests/application-wizard.spec.ts",
+    "test:enhanced": "playwright test tests/enhanced-features.spec.ts",
+    "type-check": "tsc --noEmit",
+    "storage:setup": "node setup-storage.js",
+    "storage:test": "node testing/test-storage.js",
+    "security-audit": "node security-audit.js"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "@modelcontextprotocol/sdk": "^1.18.0",
-    "@radix-ui/react-accordion": "^1.2.2",
-    "@radix-ui/react-alert-dialog": "^1.1.4",
-    "@radix-ui/react-aspect-ratio": "^1.1.1",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-collapsible": "^1.1.2",
-    "@radix-ui/react-context-menu": "^2.2.4",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-hover-card": "^1.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-menubar": "^1.1.4",
-    "@radix-ui/react-navigation-menu": "^1.2.3",
-    "@radix-ui/react-popover": "^1.1.4",
-    "@radix-ui/react-progress": "^1.1.1",
-    "@radix-ui/react-radio-group": "^1.2.2",
-    "@radix-ui/react-scroll-area": "^1.2.2",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slider": "^1.2.2",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.2",
-    "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-toggle": "^1.1.1",
-    "@radix-ui/react-toggle-group": "^1.1.1",
-    "@radix-ui/react-tooltip": "^1.1.6",
-    "@supabase/supabase-js": "^2.57.4",
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.39.0",
     "@tanstack/react-query": "^5.87.4",
-    "@xenova/transformers": "^2.17.2",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
-    "date-fns": "^3.0.0",
-    "dompurify": "^3.0.8",
-    "dotenv": "^17.2.2",
-    "embla-carousel-react": "^8.5.2",
-    "framer-motion": "^11.18.2",
-    "immer": "^10.1.3",
-    "input-otp": "^1.4.2",
-    "lucide-react": "^0.364.0",
-    "next-themes": "^0.4.4",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.5.4",
+    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
-    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
-    "react-dropzone": "^14.3.8",
-    "react-hook-form": "^7.54.2",
-    "react-intersection-observer": "^9.0.0",
-    "react-resizable-panels": "^2.1.7",
-    "react-router-dom": "^6",
-    "react-turnstile": "^1.1.4",
-    "recharts": "^2.12.4",
-    "sonner": "^1.7.2",
-    "tailwind-merge": "^2.6.0",
+    "react-hook-form": "^7.53.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^6.26.1",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "tesseract.js": "^5.1.1",
-    "vaul": "^1.1.2",
-    "vite-plugin-pwa": "^1.0.3",
-    "workbox-window": "^7.3.0",
-    "zod": "^3.24.1",
-    "zustand": "^5.0.8"
+    "tesseract.js": "^6.0.1",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@playwright/test": "^1.55.0",
-    "@types/dompurify": "^3.0.5",
-    "@types/node": "^22.10.7",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@types/react-router-dom": "^5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "10.4.20",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
-    "postcss": "8.4.49",
-    "tailwindcss": "v3.4.16",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1",
-    "vite-plugin-source-identifier": "1.1.2"
+    "@playwright/test": "^1.47.0",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10",
+    "terser": "^5.32.0",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.1",
+    "vite-plugin-pwa": "^0.20.5"
   }
 }
